[package]
name = "feedback"
version = "0.1.0"
authors = ["Wonko <wonko@hanstool.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full", "rt"] }
futures = "0.3"
url="2"
rand="0.8"
